@@ -29,6 +29,7 @@
 #ifndef WTF_ASCIICType_h
 #define WTF_ASCIICType_h
 
+#include <wtf/Assertions.h>
 #include <wtf/Platform.h>
 
 // The behavior of many of the functions in the <ctype.h> header is dependent
